# battledroids

./: Cargo.toml
_ref/: .processor.rs.swp  processor.rs
docs/: .~lock.BattleDroids ISA.ods#  BattleDroids ISA.ods  README.md  poem.txt
docs/snippets/: inline_asm.rs
src/: lib.rs  main.rs
src/asm/: mod.rs
src/emu/: builder.rs  cart.rs  code.rs  instr.rs  machine.rs  mod.rs
src/emu/cpu/: cmp.rs  cu.rs  isa.rs  mod.rs  pe.rs  register.rs
src/emu/mem/: mod.rs  ram.rs
src/types/: flaken.rs  from_byte_code.rs  mod.rs  stack.rs  table.rs
