[package]
authors = ["<Gian gian@convolutedsystems.com>"]
name = "battledroids"
description = "An implementation of a BattleDroids VM and Assembler"
documentation = "https://docs.rs/battledroids"
homepage = "https://battledroids.net"
license = "CDDL/OGL"
version = "0.1.0"
edition = "2021"

# smfin
[dependencies]
# terminal and cli
#colored = "2.0" #{ version = "2.0", optional = true }
#clap = "4.0" #{ version = "4.0", option = true }

enum_primitive = "0.1"
num-traits = "0.2"
log = "0.4"
pretty_env_logger = "*"

rmp = "0.8"
rand = "0.8"

[workspace]